Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-12153

Parquet STRUCT reader doesn't fill position slots

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • Impala 4.3.0
    • Backend
    • None
    • ghx-label-13

    Description

      The Parquet STRUCT reader doesn't fill the collection position slot, neither the file position slot.

      E.g.:

      select id, file__position, pos, item
      from complextypestbl c, c.nested_struct.c.d.item;
      
      SET expand_complex_types=True;
      select file__position, * from complextypestbl;

      Attachments

        Activity

          People

            boroknagyz Zoltán Borók-Nagy
            boroknagyz Zoltán Borók-Nagy
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: